--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <h1> My Weddd </h1>
     <script> window.alert('Hello World'); </script>
+    <script> window.alert('Hello World'); </script>
+    <script> window.alert('Hello World'); </script>
+    <script> window.alert('Hello World'); </script>
  
 
 
